--- a/Google scholar-Copy1.ipynb
+++ b/Google scholar-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -22,148 +22,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input you search data: image\n",
+      "input you search data: image Recognition\n",
       "input you search file path: for example C:/Users/ABDULLAH/Pictures/: C:/Users/ABDULLAH/Pictures/\n",
       "input lower year Range: 2010\n",
       "input higher year Range: 2020\n",
+      "190404767  ....downloading\n",
+      "190404767 finished downloading\n",
+      "09076601pdf  ....downloading\n",
+      "09076601pdf finished downloading\n",
+      "US10616613pdf  ....downloading\n",
+      "US10616613pdf finished downloading\n",
+      "US10565759pdf  ....downloading\n",
+      "US10565759pdf finished downloading\n",
+      "US20190012526A1pdf  ....downloading\n",
+      "US20190012526A1pdf finished downloading\n",
+      "180408348  ....downloading\n",
+      "180408348 finished downloading\n",
+      "US10621468pdf  ....downloading\n",
+      "US10621468pdf finished downloading\n",
+      "200107761  ....downloading\n",
+      "200107761 finished downloading\n",
+      "08952686pdf  ....downloading\n",
+      "08952686pdf finished downloading\n",
+      "08977374pdf  ....downloading\n",
+      "08977374pdf finished downloading\n",
+      "20191008093835_eb05x0ybwepdf  ....downloading\n",
+      "20191008093835_eb05x0ybwepdf finished downloading\n",
+      "200309150  ....downloading\n",
+      "200309150 finished downloading\n",
+      "190807919  ....downloading\n",
+      "190807919 finished downloading\n",
+      "prl20pdf  ....downloading\n",
+      "prl20pdf finished downloading\n",
+      "170606247  ....downloading\n",
+      "170606247 finished downloading\n",
+      "190106792  ....downloading\n",
+      "190106792 finished downloading\n",
+      "09085435pdf  ....downloading\n",
+      "09085435pdf finished downloading\n",
+      "US10599709pdf  ....downloading\n",
+      "US10599709pdf finished downloading\n",
       "pdf  ....downloading\n",
       "pdf finished downloading\n",
-      "1902.06068  ....downloading\n",
-      "1902.06068 finished downloading\n",
-      "2003.11597  ....downloading\n",
-      "2003.11597 finished downloading\n",
-      "1812.10477  ....downloading\n",
-      "1812.10477 finished downloading\n",
-      "1711.05139  ....downloading\n",
-      "1711.05139 finished downloading\n",
-      "1806.06397  ....downloading\n",
-      "1806.06397 finished downloading\n",
-      "application-of-the-image-analysis-technique  ....downloading\n",
-      "application-of-the-image-analysis-technique finished downloading\n",
-      "1903.02026  ....downloading\n",
-      "1903.02026 finished downloading\n",
-      "1905.01270  ....downloading\n",
-      "1905.01270 finished downloading\n",
-      "2005.07727  ....downloading\n",
-      "2005.07727 finished downloading\n",
-      "US10567726.pdf  ....downloading\n",
-      "US10567726.pdf finished downloading\n",
-      "US10527859.pdf  ....downloading\n",
-      "US10527859.pdf finished downloading\n",
-      "US20160381348A1.pdf  ....downloading\n",
-      "US20160381348A1.pdf finished downloading\n",
-      "US10531071.pdf  ....downloading\n",
-      "US10531071.pdf finished downloading\n",
-      "1808.03818  ....downloading\n",
-      "1808.03818 finished downloading\n",
-      "US10606454.pdf  ....downloading\n",
-      "US10606454.pdf finished downloading\n",
-      "2003.05037  ....downloading\n",
-      "2003.05037 finished downloading\n",
-      "US10540818.pdf  ....downloading\n",
-      "US10540818.pdf finished downloading\n",
-      "US10606933.pdf  ....downloading\n",
-      "US10606933.pdf finished downloading\n",
-      "US20170094169A1.pdf  ....downloading\n",
-      "US20170094169A1.pdf finished downloading\n",
-      "US10546015.pdf  ....downloading\n",
-      "US10546015.pdf finished downloading\n",
-      "US10539793.pdf  ....downloading\n",
-      "US10539793.pdf finished downloading\n",
-      "1912.12318  ....downloading\n",
-      "1912.12318 finished downloading\n",
-      "1709.00192  ....downloading\n",
-      "1709.00192 finished downloading\n",
-      "s00330-020-06817-6  ....downloading\n",
-      "s00330-020-06817-6 finished downloading\n",
-      "US10617374.pdf  ....downloading\n",
-      "US10617374.pdf finished downloading\n",
-      "1902.04049  ....downloading\n",
-      "1902.04049 finished downloading\n",
-      "US10555778.pdf  ....downloading\n",
-      "US10555778.pdf finished downloading\n",
-      "US20150208909A1.pdf  ....downloading\n",
-      "US20150208909A1.pdf finished downloading\n",
-      "Veldhuis_et_al._2018_Me_my_selfie_and_I_..._.pdf  ....downloading\n",
-      "Veldhuis_et_al._2018_Me_my_selfie_and_I_..._.pdf finished downloading\n",
-      "US20160143778A1.pdf  ....downloading\n",
-      "US20160143778A1.pdf finished downloading\n",
-      "US10591756.pdf  ....downloading\n",
-      "US10591756.pdf finished downloading\n",
-      "1908.10454  ....downloading\n",
-      "1908.10454 finished downloading\n",
-      "1809.01826  ....downloading\n",
-      "1809.01826 finished downloading\n",
-      "US10551895.pdf  ....downloading\n",
-      "US10551895.pdf finished downloading\n",
-      "US10546211.pdf  ....downloading\n",
-      "US10546211.pdf finished downloading\n",
-      "US20180191944A1.pdf  ....downloading\n",
-      "US20180191944A1.pdf finished downloading\n",
-      "US20160034682A1.pdf  ....downloading\n",
-      "US20160034682A1.pdf finished downloading\n",
-      "US10546242.pdf  ....downloading\n",
-      "US10546242.pdf finished downloading\n",
-      "US10613342.pdf  ....downloading\n",
-      "US10613342.pdf finished downloading\n",
-      "1806.01576  ....downloading\n",
-      "1806.01576 finished downloading\n",
-      "US10547864.pdf  ....downloading\n",
-      "US10547864.pdf finished downloading\n",
-      "US10585395.pdf  ....downloading\n",
-      "US10585395.pdf finished downloading\n",
-      "US10524752.pdf  ....downloading\n",
-      "US10524752.pdf finished downloading\n",
-      "1812.04276  ....downloading\n",
-      "1812.04276 finished downloading\n",
-      "US10595014.pdf  ....downloading\n",
-      "US10595014.pdf finished downloading\n",
-      "US10546352.pdf  ....downloading\n",
-      "US10546352.pdf finished downloading\n",
-      "US10580140.pdf  ....downloading\n",
-      "US10580140.pdf finished downloading\n",
-      "1706.01000  ....downloading\n",
-      "1706.01000 finished downloading\n",
-      "Secure-Image-Processing-and-Transmission-Schema-in-Cluster-Based-Wireless-Sensor-Network-Secure-Image-Processing-and-Transmission-Schema-in-Cluster-Based-Wireless-Sensor-Network.pdf  ....downloading\n",
-      "Secure-Image-Processing-and-Transmission-Schema-in-Cluster-Based-Wireless-Sensor-Network-Secure-Image-Processing-and-Transmission-Schema-in-Cluster-Based-Wireless-Sensor-Network.pdf finished downloading\n",
-      "US10542955.pdf  ....downloading\n",
-      "US10542955.pdf finished downloading\n",
-      "US10554894.pdf  ....downloading\n",
-      "US10554894.pdf finished downloading\n",
-      "2005.01996  ....downloading\n",
-      "2005.01996 finished downloading\n",
-      "1209  ....downloading\n",
-      "1209 finished downloading\n",
-      "1807.00284  ....downloading\n",
-      "1807.00284 finished downloading\n",
-      "US10621307.pdf  ....downloading\n",
-      "US10621307.pdf finished downloading\n",
-      "US20170331983A1.pdf  ....downloading\n",
-      "US20170331983A1.pdf finished downloading\n",
-      "US20170254987A1.pdf  ....downloading\n",
-      "US20170254987A1.pdf finished downloading\n",
-      "US10571658.pdf  ....downloading\n",
-      "US10571658.pdf finished downloading\n",
-      "US10594972.pdf  ....downloading\n",
-      "US10594972.pdf finished downloading\n",
-      "1711.02549  ....downloading\n",
-      "1711.02549 finished downloading\n",
-      "US10565305.pdf  ....downloading\n",
-      "US10565305.pdf finished downloading\n",
-      "US20170004360A1.pdf  ....downloading\n",
-      "US20170004360A1.pdf finished downloading\n",
-      "downloadArticleFile.do?attachType=PDF&id=355  ....downloading\n"
-     ]
-    },
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 22] Invalid argument: 'C:/Users/ABDULLAH/Pictures/downloadArticleFile.do?attachType=PDF&id=355.pdf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-c3fd589c53cc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"  ....downloading\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mmyfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murls\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mallow_redirects\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilePath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfile_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.pdf'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" finished downloading\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOSError\u001b[0m: [Errno 22] Invalid argument: 'C:/Users/ABDULLAH/Pictures/downloadArticleFile.do?attachType=PDF&id=355.pdf'"
+      "htm  ....downloading\n",
+      "htm finished downloading\n",
+      "ALSATO  ....downloading\n",
+      "url is faulty\n",
+      "22134636pdf  ....downloading\n",
+      "22134636pdf finished downloading\n",
+      "200207754  ....downloading\n",
+      "200207754 finished downloading\n",
+      "S0262885619304597  ....downloading\n",
+      "S0262885619304597 finished downloading\n",
+      "191104241  ....downloading\n",
+      "191104241 finished downloading\n",
+      "190902410  ....downloading\n",
+      "190902410 finished downloading\n",
+      "US20200051230A1pdf  ....downloading\n",
+      "US20200051230A1pdf finished downloading\n",
+      "154dec2019pdf  ....downloading\n",
+      "154dec2019pdf finished downloading\n",
+      "190710456  ....downloading\n",
+      "190710456 finished downloading\n",
+      "S1319157818302404  ....downloading\n",
+      "S1319157818302404 finished downloading\n",
+      "Histogramlearningapproachtoimagerecognitionpdf  ....downloading\n",
+      "Histogramlearningapproachtoimagerecognitionpdf finished downloading\n",
+      "matecconf_cscns2020_03027pdf  ....downloading\n",
+      "matecconf_cscns2020_03027pdf finished downloading\n",
+      "  ....downloading\n",
+      " finished downloading\n",
+      "US20200007755A1pdf  ....downloading\n",
+      "US20200007755A1pdf finished downloading\n",
+      "pdf  ....downloading\n",
+      "pdf finished downloading\n",
+      "US10528809pdf  ....downloading\n",
+      "US10528809pdf finished downloading\n",
+      "US20200005023A1pdf  ....downloading\n",
+      "US20200005023A1pdf finished downloading\n",
+      "200308685  ....downloading\n",
+      "200308685 finished downloading\n",
+      "Facialexpressionrecognitionwithconvolutionalneuralnetworksviaanewfacecroppingandrotationstrategypdf  ....downloading\n",
+      "Facialexpressionrecognitionwithconvolutionalneuralnetworksviaanewfacecroppingandrotationstrategypdf finished downloading\n",
+      "US20200019788A1pdf  ....downloading\n",
+      "US20200019788A1pdf finished downloading\n",
+      "190311233  ....downloading\n",
+      "190311233 finished downloading\n",
+      "DeepLearningBasedRepresentationforFaceRecognitionpdf  ....downloading\n",
+      "DeepLearningBasedRepresentationforFaceRecognitionpdf finished downloading\n",
+      "US10599959pdf  ....downloading\n",
+      "US10599959pdf finished downloading\n",
+      "S0925231219316510  ....downloading\n",
+      "S0925231219316510 finished downloading\n",
+      "3pdf  ....downloading\n",
+      "3pdf finished downloading\n",
+      "s0003401901222x  ....downloading\n",
+      "s0003401901222x finished downloading\n",
+      "9783030277314_13  ....downloading\n",
+      "9783030277314_13 finished downloading\n",
+      "pdf  ....downloading\n",
+      "pdf finished downloading\n",
+      "181210477  ....downloading\n",
+      "181210477 finished downloading\n",
+      "200305037  ....downloading\n",
+      "200305037 finished downloading\n",
+      "IF2019pdf  ....downloading\n",
+      "IF2019pdf finished downloading\n",
+      "180606397  ....downloading\n",
+      "180606397 finished downloading\n",
+      "Albiero_Analysis_of_Gender_Inequality_In_Face_Recognition_Accuracy_WACVW_2020_paperpdf  ....downloading\n",
+      "Albiero_Analysis_of_Gender_Inequality_In_Face_Recognition_Accuracy_WACVW_2020_paperpdf finished downloading\n",
+      "181201043  ....downloading\n",
+      "181201043 finished downloading\n",
+      "pdf  ....downloading\n",
+      "pdf finished downloading\n"
      ]
     }
    ],
@@ -183,17 +155,22 @@
     "    for link in links:\n",
     "        urls = link.get('href')\n",
     "        #print(urls)\n",
-    "        file_name = urls.split('/')[-1]  \n",
+    "        file_name = urls.split('/')[-1]\n",
+    "        file_name = re.sub('\\W+','', file_name)\n",
     "        print(file_name + \"  ....downloading\")\n",
-    "        myfile = requests.get(urls, allow_redirects=True)\n",
-    "        open(filePath + file_name + '.pdf', 'wb').write(myfile.content)\n",
-    "        print(file_name + \" finished downloading\")\n",
+    "        \n",
+    "        try:\n",
+    "            myfile = requests.get(urls, allow_redirects=True)\n",
+    "            open(filePath + file_name + '.pdf', 'wb').write(myfile.content)\n",
+    "            print(file_name + \" finished downloading\")\n",
+    "        except:\n",
+    "            print('url is faulty')\n",
     "               "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +179,7 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +187,13 @@
    "source": [
     "response.status_code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
